sedaj lahko tudi izdelamo tabele v podatkovni bazi