@@ -1,15 +1,15 @@
 package org.sessionization.parser;
 
+import org.sessionization.fields.*;
+import org.sessionization.fields.w3c.*;
+import org.sessionization.parser.datastruct.ParsedLine;
+
 import java.io.*;
-import java.net.URL;
+import java.net.URI;
+import java.net.URISyntaxException;
 import java.text.ParseException;
 import java.time.format.DateTimeFormatter;
 import java.util.*;
-
-import org.sessionization.fields.*;
-import org.sessionization.fields.UriSteam;
-import org.sessionization.fields.w3c.*;
-import org.sessionization.parser.datastruct.ParsedLine;
 
 /**
  * Parser za formate: Extended Log Format
@@ -83,11 +83,11 @@ public class W3CParser extends AbsParser {
 		this.dateFormat = DateTimeFormatter.ofPattern(format == null ? "yyyy-MM-dd" : format).withLocale(locale == null ? Locale.getDefault() : locale);
 	}
 	/**
-     * Nastavljanje formata za parsanje &#x10d;asa
-     *
-     * @param format
-     * @param localeString
-     */
+	 * Nastavljanje formata za parsanje &#x10d;asa
+	 *
+	 * @param format
+	 * @param localeString
+	 */
 	public void setTimeFormat(String format, Locale locale) {
 		this.timeFormat = DateTimeFormatter.ofPattern(format == null ? "HH:mm:ss" : format).withLocale(locale == null ? Locale.getDefault() : locale);
 	}
@@ -122,7 +122,7 @@ public class W3CParser extends AbsParser {
 	}
 
 	@Override
-	public ParsedLine parseLine() throws ParseException, IOException {
+	public ParsedLine parseLine() throws ParseException, IOException, URISyntaxException {
 		List<String> tokens = parse(getLine());
 		if(tokens == null) return null;
 		if(tokens.get(0).charAt(0) == '#') {
@@ -137,7 +137,7 @@ public class W3CParser extends AbsParser {
 		for (int i = 0; i < super.fieldType.size(); i++) {
 			switch (super.fieldType.get(i)) {
 			case Referer:
-				lineData[i] = new Referer(new URL(tokens.get(i)));
+				lineData[i] = new Referer(new URI(tokens.get(i)));
 				break;
 			case Cookie:
 				lineData[i] = new Cookie(tokens.get(i), LogType.W3C);
@@ -212,10 +212,10 @@ public class W3CParser extends AbsParser {
 		return new ParsedLine(lineData);
 	}
 
-    @Override
-    public Iterator<ParsedLine> iterator() {
-        try {
-            return new Iterator<ParsedLine>() {
+	@Override
+	public Iterator<ParsedLine> iterator() {
+		try {
+			return new Iterator<ParsedLine>() {
 
 				private ParsedLine next = parseLine();
 
@@ -236,11 +236,15 @@ public class W3CParser extends AbsParser {
 						return tmp;
 					} catch (ParseException | IOException e) {
 						return null;
+					} catch (URISyntaxException e) {
+						return null;
 					}
 				}
 			};
-        } catch (ParseException | IOException e) {
-            return null;
-        }
-    }
+		} catch (ParseException | IOException e) {
+			return null;
+		} catch (URISyntaxException e) {
+			return null;
+		}
+	}
 }
